--- a/style.css
+++ b/style.css
@@ -1,54 +1,203 @@
+
 /*  Navigation Area Start */
 .header {
 
-   display: flex;
+    display: flex;
+ }
+ 
+ img.header-logo {
+     margin-left: 102px;
+ }
+ .nav-section{
+    
+     display: inline-block;
+     margin: 0 auto;
+     text-align: center;
+     margin-top: 50px;
+ }
+ .singup-section{
+     margin-top: 40px;
+    
+ }
+ 
+ a.nav {
+     text-decoration: none;
+     margin-left: 25px;
+     font-family: Poppins;
+     font-size: 17px;
+     font-weight: 600;
+     color: #000000;
+     letter-spacing: 0.02rem;
+ }
+ 
+ a.sing-in {
+     text-decoration: none;
+     font-family: Poppins;
+     font-size: 20px;
+     font-weight: 500;
+     color: #000000;
+     margin-right: 65px;
+ }
+ button.heder-btn {
+     font-family: Poppins;
+     font-size: 15px;
+     font-weight: 500;
+     border: none;
+     background: #54B8FF;
+     color: #FFFFFF;
+     margin-right: 34px;
+     padding: 10px;
+     border-radius: 10px;
+     width: 96px;
+     height: 39px;
+     cursor: pointer;
+ }
+ /*  Navigation Area End */
+ 
+ 
+ /*  Hero Area Start */
+ 
+ .hero{
+     display: flex ;
+     height: 700px;
+ }
+ .hero-one{
+ height: 700px;
+ display: inline-block;
+ width: 50%;
+ }
+ img.hero-middle-shape {
+    position: relative;
+    left: 627px;
 }
 
-img.header-logo {
-    margin-left: 102px;
+ h3.hero-h-three {
+     font-family: Poppins;
+     font-size: 20px;
+     font-weight: 500;
+     letter-spacing: 0.235em;
+     color: #2F2B71;
+     margin-left: 100px;
+     width: 315px;
+     margin-top: 85px;
+ }
+ img.hero-first-shape {
+    position: relative;
+    width: 25px;
+    bottom: 140px;
 }
-.nav-section{
-   
-    display: inline-block;
-    margin: 0 auto;
-    text-align: center;
-    margin-top: 50px;
-}
-.singup-section{
-    margin-top: 40px;
-   
-}
-
-a.nav {
-    text-decoration: none;
-    margin-left: 25px;
+h1.hero-h-one- {
     font-family: Poppins;
-    font-size: 17px;
-    font-weight: 600;
-    color: #000000;
-    letter-spacing: 0.02rem;
+    font-size: 70px;
+    font-weight: 700;
+    margin-left: 100px;
+    color: #5F596E;
+    position: relative;
+    bottom: 141px;
 }
-
-a.sing-in {
-    text-decoration: none;
+p.hero-one-pera {
     font-family: Poppins;
     font-size: 20px;
     font-weight: 500;
-    color: #000000;
-    margin-right: 65px;
+    letter-spacing: 0.05em;
+    margin-left: 100px;
+    position: relative;
+    bottom: 160px;
 }
-button.heder-btn {
-    font-family: Poppins;
-    font-size: 15px;
-    font-weight: 500;
+button.hero-apply-btn {
+    margin-left: 100px;
     border: none;
-    background: #54B8FF;
-    color: #FFFFFF;
-    margin-right: 34px;
-    padding: 10px;
-    border-radius: 10px;
-    width: 96px;
-    height: 39px;
+    background: linear-gradient(90deg, #54B8FF -1.36%, #54B8FF 105.62%);
+    color: white;
+    font-family: Poppins;
+    font-size: 11px;
+    font-weight: 600;
+    letter-spacing: 0.105em;
+    box-shadow: 0px 0px 30px 0px #41877B40;
+    width: 132px;
+    padding: 12px 16px;
+    position: relative;
+    bottom: 250px;
+    line-height: 9px;
     cursor: pointer;
 }
-/*  Navigation Area End */
+.fa-solid,.fas {
+    font-weight: 900;
+    margin-left: 8px;
+}
+img.hero-second-shape {
+    position: relative;
+    right: 242px;
+    bottom: 100px;
+    width: 70px;
+}
+
+img.hero-third-shape {
+    position: relative;
+    left: 99px;
+    bottom: 142px;
+    width: 254px;
+}
+ .hero-two{
+
+   height: 700px;
+   display: inline-block;
+   width: 50%;
+   background-image: url(img/hero.png);
+   background-repeat: no-repeat;
+   background-size: 630px 630px;
+   background-position: 0px 55px;
+ }
+ img.hero-two-object-one {
+     width: 80px;
+     position: relative;
+     top: 200px;
+     left: 60px;
+    }
+    img.hero-two-object-two {
+        width: 80px;
+        position: relative;
+        top: 63px;
+        left: 50px;
+    }
+
+img.hero-two-object-three {
+    width: 80px;
+    position: relative;
+    top: 0px;
+    left: 91px;
+}
+
+img.hero-two-object-four {
+    width: 80px;
+    position: relative;
+    top: 36px;
+    left: 165px;
+}
+
+img.hero-two-object-five {
+    width: 80px;
+    position: relative;
+    top: 200px;
+    left: 110px;
+}
+
+
+
+    img.hero-two-shape-two {
+        width: 55px;
+        position: relative;
+        top: 425px;
+        left: 165px;
+    }
+    
+    img.hero-two-shape-one {}
+    
+    img.hero-two-shape-one {
+        width: 30px;
+        position: relative;
+        left: 224px;
+        top: 160px;
+    }
+  
+ /*  Hero Area End */
